auth function finish